[gd_scene load_steps=10 format=3 uid="uid://ydllislahl4k"]

[ext_resource type="TileSet" uid="uid://bvp5usyroxi7s" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_level/TileSet.tres" id="1_ea6oy"]
[ext_resource type="Script" uid="uid://y5vphojfxooe" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_level/containment_passage_level.gd" id="1_vif6u"]
[ext_resource type="Texture2D" uid="uid://548x4b6qxgg6" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_assets/placeholder_goal.png" id="2_45mc6"]
[ext_resource type="PackedScene" uid="uid://dux5tltojiemw" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_player/player.tscn" id="3_ee7qd"]
[ext_resource type="PackedScene" uid="uid://ct2qqxchpmhv5" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_enemies/eco_salamander.tscn" id="4_cyqkr"]
[ext_resource type="PackedScene" uid="uid://n4y13wjwv5oc" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_enemies/Eco_Floater_Guard.tscn" id="4_vif6u"]
[ext_resource type="PackedScene" uid="uid://cvjc7tdg114wn" path="res://scenes/quests/story_quests/estation _echo_9/2_containment_passages/containment_passages_enemies/Eco_Sentinel.tscn" id="5_cyqkr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cyb3"]
size = Vector2(66, 58)

[sub_resource type="LabelSettings" id="LabelSettings_bc124"]
font_size = 24
font_color = Color(0.08235294, 0.6784314, 1, 1)
shadow_color = Color(0, 0.9607843, 0, 0)

[node name="Containment_Passage_Level" type="Node2D"]
script = ExtResource("1_vif6u")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_ea6oy")
collision_animatable = true
format = 2

[node name="Goal_Area" type="Area2D" parent="."]
position = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="Goal_Area"]
modulate = Color(0, 1, 0.03137255, 1)
texture = ExtResource("2_45mc6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal_Area"]
position = Vector2(6, -7)
shape = SubResource("RectangleShape2D_2cyb3")

[node name="Eco_Salamander" parent="Goal_Area" instance=ExtResource("4_cyqkr")]
position = Vector2(417, -126)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue_Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.123
anchor_top = -0.17400001
anchor_right = 0.16800001
anchor_bottom = -0.17400001
offset_left = 31.559998
offset_top = -16.719994
offset_right = 24.959991
offset_bottom = 17.280006
grow_horizontal = 2
grow_vertical = 2
text = "hola"
label_settings = SubResource("LabelSettings_bc124")
justification_flags = 235

[node name="Dialogue_Timer" type="Timer" parent="."]
one_shot = true

[node name="Player" parent="." instance=ExtResource("3_ee7qd")]
position = Vector2(-132, 133)

[node name="Eco_Floater_Guard" parent="." instance=ExtResource("4_vif6u")]
position = Vector2(590, 109)

[node name="Eco_Sentinel" parent="." instance=ExtResource("5_cyqkr")]
position = Vector2(198, 289)
